Add more unit tests